--- a/3-about.html
+++ b/3-about.html
@@ -15,11 +15,13 @@ header-img: "img/post-bg-rwd.jpg"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>好好学习<br>
-    天天向上</p></blockquote>
+    <blockquote><p>嚼得菜根</p></blockquote>
 
     <p> I am SHEN, Minghong, a PhD student in <a href="https://hkust-gz.edu.cn/academics/four-hubs/society-hub/urban-governance-and-design"> 
         Urban Governance and Design (UGOD) Thrust</a> at the Hong Kong University of Science and Technology, Guangzhou Campus (HKUST-GZ). </p>
+
+    <p> 我是沈明宏，香港科技大学（广州校区）<a href="https://hkust-gz.edu.cn/zh-hans/academics/four-hubs/society-hub/urban-governance-and-design"> 
+        城市治理与设计学域</a> 的在读博士研究生。
 
     <p></p>
     
